--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
     <header>
         <h1>Hello world</h1>
     </header>
+    <main>
+        <section>
+            <h2>Section</h2>
+            <article>
+                <h3>Article</h3>
+            </article>
+        </section>
+        <section>
+            <h2>Section2</h2>
+            <article>
+                <h2>Article 2</h2>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
