Editing a tag article 2

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
             </article>
         </section>
         <section>
-            <h2>Section2</h2>
+            <h1>Section2</h1>
             <article>
-                <h2>Article 2</h2>
+                <h3>Article 2</h3>
             </article>
         </section>
     </main>
+    <footer>
+        <small>Mis à jour le 23/11/2024 par Matthieu</small>
+    </footer>
 </body>
 </html>
